Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectNumObj.quorum
Number n
n:SetValue(7.5)
Object o = cast(Object, n)
Number a = cast(Number, o)
output a:GetValue()