Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextNumObj.quorum
class main
    action Main
        Number n
        text txt
        n:SetValue(7.5)
        txt = cast(text, n)
    end
end